--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,22 +3,22 @@
     "target": "ES2022",
     "module": "NodeNext",
     "rootDir": "./",
-    // "moduleResolution": "node10",
     "moduleResolution": "nodenext",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "isolatedModules": true,
     "outDir": "./dist",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true, 
-    /* Type Checking */
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true 
+    "skipLibCheck": true
   },
   "include": [
-    "src/**/*"  
-, "drizzle.config.ts"  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "src/**/*",
+    "drizzle.config.ts",
+    "**/*.spec.ts",   
+    "**/*.test.ts"    
   ],
+  "exclude": [
+    "node_modules"
+  ]
 }
