--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/cypress": "^1.1.6",
     "@types/file-saver": "^2.0.7",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.1",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
